--- a/index.html
+++ b/index.html
@@ -26,7 +26,28 @@
             <header class="header">
                 <!-- start container -->
                 <div class="container">
-                    gg1 <br> ff <br> gg br gfgh <br> ff
+                    <div class="logo header-logo">
+                        <img src="img/logo/logo.png" alt="logo" class="logo__img">
+                    </div>
+                    <nav class="navigation">
+                        <ul class="navigation__list">
+                            <li class="navigation__item"><a href="#" class="navigation__link">Home</a></li>
+                            <li class="navigation__item"><a href="#" class="navigation__link">Portfolio</a></li>
+                            <li class="navigation__item"><a href="#" class="navigation__link">Blog</a></li>
+                            <li class="navigation__item"><a href="#" class="navigation__link">Pages</a></li>
+                            <li class="navigation__item"><a href="#" class="navigation__link">Features</a></li>
+                            <li class="navigation__item"><a href="#" class="navigation__link">Mega Menu</a></li>
+                            <li class="navigation__item"><a href="#" class="navigation__link">Contact</a></li>
+                        </ul>
+                    </nav>
+                    <div class="search">
+                        <form action="index.html" method="GET" class="header-search">
+                            <input type="search" class="header-search__input">
+                            <button class="header-search__button">
+                                <span class="header-search__button-pic"></span>
+                            </button>
+                        </form>
+                    </div>
                 </div>
                 <!-- end container -->
             </header>
