add header structure

--- a/index.html
+++ b/index.html
@@ -31,22 +31,16 @@
                     </div>
                     <nav class="navigation">
                         <ul class="navigation__list">
-                            <li class="navigation__item"><a href="#" class="navigation__link">Home</a></li>
-                            <li class="navigation__item"><a href="#" class="navigation__link">Portfolio</a></li>
-                            <li class="navigation__item"><a href="#" class="navigation__link">Blog</a></li>
-                            <li class="navigation__item"><a href="#" class="navigation__link">Pages</a></li>
-                            <li class="navigation__item"><a href="#" class="navigation__link">Features</a></li>
-                            <li class="navigation__item"><a href="#" class="navigation__link">Mega Menu</a></li>
-                            <li class="navigation__item"><a href="#" class="navigation__link">Contact</a></li>
+                            <li class="navigation__item"><a href="#" class="navigation__link">Студия</a></li>
+                            <li class="navigation__item"><a href="#" class="navigation__link">Клиенты</a></li>
+                            <li class="navigation__item"><a href="#" class="navigation__link">Магазин</a></li>
+                            <li class="navigation__item"><a href="#" class="navigation__link">Контакты</a></li>
                         </ul>
                     </nav>
-                    <div class="search">
-                        <form action="index.html" method="GET" class="header-search">
-                            <input type="search" class="header-search__input">
-                            <button class="header-search__button">
-                                <span class="header-search__button-pic"></span>
-                            </button>
-                        </form>
+                    <div class="basket">
+                        <ul class="basket__list">
+                            <li class="basket__item"><a href="#" class="basket__link">Корзина</a></li>
+                        </ul>
                     </div>
                 </div>
                 <!-- end container -->
