--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <!-- start header -->
             <header class="header">
                 <!-- start container -->
-                <div class="container">
+                <div class="container header-container">
                     <div class="logo header-logo">
                         <img src="img/logo/logo.png" alt="logo" class="logo__img">
                     </div>
