--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <!-- start container -->
                 <div class="container header-container">
                     <div class="logo header-logo">
-                        <img src="img/logo/logo.png" alt="logo" class="logo__img">
+                        <img src="img/logo/nerds-logo.png" alt="logo" class="logo__img">
                     </div>
                     <nav class="navigation">
                         <ul class="navigation__list">
