add header-container-bottom block

--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
                     </div>
                 </div>
                 <!-- end container -->
+                <!-- start container -->
+                <div class="container header-container-bottom">
+<section class="slogan">
+    ss
+</section>
+<div class="slide">
+    ff
+</div>
+                </div>
+                <!-- end container -->
             </header>
             <!-- end header -->
             <!-- start maincontent -->
