add slide block

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
                 <!-- end container -->
                 <!-- start container -->
                 <div class="container header-container-bottom">
-<section class="slogan">
-    ss
-</section>
-<div class="slide">
-    ff
-</div>
+                    <section class="slogan">
+                        ss
+                    </section>
+                    <div class="slide">
+                        <img src="img/technical/slide1.png" alt="наши способности" class="img slide__img">
+                    </div>
                 </div>
                 <!-- end container -->
             </header>
