add slogan block

--- a/index.html
+++ b/index.html
@@ -47,7 +47,17 @@
                 <!-- start container -->
                 <div class="container header-container-bottom">
                     <section class="slogan">
-                        ss
+                        <span class="slogan__title">
+                            Долго, дорого, 
+                            скрупулезно.
+                        </span>
+                        <p class="slogan__text">
+                                Математически выверенный дизайн 
+                                для вашего сайта или мобильного приложения.
+                        </p>
+                        <button class="slogan__button">
+                            УЗНАТЬ БОЛЬШЕ
+                        </button>
                     </section>
                     <div class="slide">
                         <img src="img/technical/slide1.png" alt="наши способности" class="img slide__img">
