add address block & style fot him

--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
                 <!-- start container -->
                 <div class="container header-container">
                     <div class="logo header-logo">
-                        <img src="img/logo/nerds-logo.png" alt="logo" class="logo__img">
+                        <img src="img/logo/nerds-logo.png" alt="логотип" class="img logo__img">
                     </div>
                     <nav class="navigation">
                         <ul class="navigation__list">
-                            <li class="navigation__item"><a href="#" class="navigation__link">Студия</a></li>
-                            <li class="navigation__item"><a href="#" class="navigation__link">Клиенты</a></li>
-                            <li class="navigation__item"><a href="#" class="navigation__link">Магазин</a></li>
-                            <li class="navigation__item"><a href="#" class="navigation__link">Контакты</a></li>
+                            <li class="navigation__item"><a href="#" class="navigation__link" title="Студия">Студия</a></li>
+                            <li class="navigation__item"><a href="#" class="navigation__link" title="Клиенты">Клиенты</a></li>
+                            <li class="navigation__item"><a href="#" class="navigation__link" title="Магазин">Магазин</a></li>
+                            <li class="navigation__item"><a href="#" class="navigation__link" title="Контакты">Контакты</a></li>
                         </ul>
                     </nav>
                     <div class="basket">
                         <ul class="basket__list">
-                            <li class="basket__item"><a href="#" class="basket__link">Корзина</a></li>
+                            <li class="basket__item"><a href="#" class="basket__link" title="Корзина">Корзина</a></li>
                         </ul>
                     </div>
                 </div>
@@ -48,12 +48,12 @@
                 <div class="container header-container-bottom">
                     <section class="slogan">
                         <span class="slogan__title">
-                            Долго, дорого, 
+                            Долго, дорого,
                             скрупулезно.
                         </span>
                         <p class="slogan__text">
-                                Математически выверенный дизайн 
-                                для вашего сайта или мобильного приложения.
+                            Математически выверенный дизайн
+                            для вашего сайта или мобильного приложения.
                         </p>
                         <button class="slogan__button">
                             УЗНАТЬ БОЛЬШЕ
@@ -88,6 +88,32 @@
         <!-- end wrapper__content -->
         <!-- start footer -->
         <footer class="footer">
+            <!-- start ooter-map -->
+            <div class="footer-map">
+                <!-- start container -->
+                <div class="container container--footer-map">
+                    <address class="address">
+                        <span class="address__title">
+                            NЁRDS DESIGN STUDIO
+                        </span>
+                        <p class="address__text">
+                            191186, Санкт-Петербург,
+                            ул. Б. Конюшенная, д. 19/8
+                        </p>
+                        <p class="address__phone">
+                            тел. +7 (812) 275-75-75
+                        </p>
+                        <button class="address__button">
+                            Напишите нам
+                        </button>
+                    </address>
+                    <div class="map-marker">
+                        <img src="img/decor/map-marker.png.png" alt="мы тут">
+                    </div>
+                </div>
+                <!-- end container -->
+            </div>
+            <!-- end ooter-map -->
             <!-- start container -->
             <div class="container">
                 gg4
