add social block & style for him

--- a/index.html
+++ b/index.html
@@ -115,8 +115,29 @@
             </div>
             <!-- end ooter-map -->
             <!-- start container -->
-            <div class="container">
-                gg4
+            <div class="container container--bottom">
+                <section class="social">
+                    <ul class="social__list">
+                        <li class="social__item">
+                            <a href="#" class="social__link" title="vkontakte">
+                                <div class="social__wrap social__wrap--vk"></div>
+                            </a>
+                        </li>
+                        <li class="social__item">
+                            <a href="#" class="social__link" title="facebook">
+                                <div class="social__wrap social__wrap--fb"></div>
+                            </a>
+                        </li>
+                        <li class="social__item">
+                            <a href="#" class="social__link" title="instagram">
+                                <div class="social__wrap social__wrap--ins"></div>
+                            </a>
+                        </li>
+                    </ul>
+                </section>
+                <div class="friend-request">
+                    jj
+                </div>
             </div>
             <!-- end container -->
         </footer>
