add friend-request block & style for him

--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
                     </ul>
                 </section>
                 <div class="friend-request">
-                    jj
+                    <h3 class="friend-request__title">Давайте дружить, это выгодно!</h3>
+                    <p class="friend-request__text">Скидка 10% для друзей из социальных сетей.</p>
                 </div>
             </div>
             <!-- end container -->
