add structure for main block

--- a/index.html
+++ b/index.html
@@ -70,14 +70,23 @@
             <div class="maincontent">
                 <!-- start container -->
                 <div class="container">
-                    <!-- start sidebar -->
-                    <aside class="aside">
-                        ff
-                    </aside>
-                    <!-- end sidebar -->
                     <!-- start main -->
                     <main class="main">
-                        gg2
+                        <!-- start offer -->
+                        <section class="offer">
+                            ff
+                        </section>
+                        <!-- end offer -->
+                        <!-- start about -->
+                        <section class="about">
+                            dd
+                        </section>
+                        <!-- end about -->
+                        <!-- start clients -->
+                        <section class="clients">
+dd
+                        </section>
+                        <!-- end clients -->
                     </main>
                     <!-- end main -->
                 </div>
