add titles in block main

--- a/index.html
+++ b/index.html
@@ -72,19 +72,23 @@
                 <div class="container">
                     <!-- start main -->
                     <main class="main">
+                        <h1 class="visually-hidden">Сайт веб студии</h1>
                         <!-- start offer -->
                         <section class="offer">
+                            <h2 class="visually-hidden">Наши предложения/h2>
                             ff
                         </section>
                         <!-- end offer -->
                         <!-- start about -->
                         <section class="about">
+                            <h2 class="visually-hidden">О нас</h2>
                             dd
                         </section>
                         <!-- end about -->
                         <!-- start clients -->
                         <section class="clients">
-dd
+                            <h2 class="visually-hidden">Наши Клиенты</h2>
+                            dd
                         </section>
                         <!-- end clients -->
                     </main>
