--- a/index.html
+++ b/index.html
@@ -75,8 +75,38 @@
                         <h1 class="visually-hidden">Сайт веб студии</h1>
                         <!-- start offer -->
                         <section class="offer">
-                            <h2 class="visually-hidden">Наши предложения/h2>
-                            ff
+                            <h2 class="visually-hidden">Наши предложения</h2>
+                            <section class="sites">
+                                <img src="img/technical/illustration-1.jpg.png" alt="веб-сайты" class="img sites__img">
+                                <h3 class="sites__title">веб-сайты</h3>
+                                <p class="sites__text">
+                                    Мир никогда не будет прежним после того как увидит ваш сайт!
+                                </p>
+                                <button class="sites__button">
+                                    ЗАКАЗАТЬ
+                                </button>
+                            </section>
+                            <section class="applications">
+                                <img src="img/technical/illustration-2.jpg.png" alt="Приложения" class="img applications__img">
+                                <h3 class="applications__title">Приложения</h3>
+                                <p class="applications__text">
+                                    Покорите топ-10 приложений в AppStore и Google Play
+                                </p>
+                                <button class="applications__button">
+                                    ЗАКАЗАТЬ
+                                </button>
+                            </section>
+                            <section class="presentations">
+                                <img src="img/technical/illustration-3.jpg.png" alt="Презентации" class="img presentations__img">
+                                <h3 class="v__title">Презентации</h3>
+                                <p class="presentations__text">
+                                    Вы даже не подозреваете,
+                                    насколько вы изумительны!
+                                </p>
+                                <button class="presentations__button">
+                                    ЗАКАЗАТЬ
+                                </button>
+                            </section>
                         </section>
                         <!-- end offer -->
                         <!-- start about -->
