add creative block

--- a/index.html
+++ b/index.html
@@ -112,7 +112,33 @@
                         <!-- start about -->
                         <section class="about">
                             <h2 class="visually-hidden">О нас</h2>
-                            dd
+                            <!-- start creative -->
+                            <section class="creative">
+                                <h3 class="creative__title">
+                                    Мы — маленькая, но гордая
+                                    дизайн-студия из Краснодара.
+                                </h3>
+                                <p class="creative__text">
+                                    Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+                                    превыше креатива. Работаем не покладая рук, как роботы.
+                                </p>
+                                <div class="creative__work">
+                                    <p class="creative__list-title">
+                                        Выполняем заказы на разработку:
+                                    </p>
+                                    <ul class="creative__list">
+                                        <li class="creative__item">Веб-сайтов любой сложности</li>
+                                        <li class="creative__item">Мобильных приложений для iOS и Android</li>
+                                        <li class="creative__item">Слайдшоу и видео для корпоративных презентаций</li>
+                                    </ul>
+                                </div>
+                            </section>
+                            <!-- end creative -->
+                            <!-- start numbers -->
+                            <section class="numbers">
+
+                            </section>
+                            <!-- end numbers -->
                         </section>
                         <!-- end about -->
                         <!-- start clients -->
