add style for creative block

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             </section>
                             <section class="presentations">
                                 <img src="img/technical/illustration-3.jpg.png" alt="Презентации" class="img presentations__img">
-                                <h3 class="v__title">Презентации</h3>
+                                <h3 class="presentations__title">Презентации</h3>
                                 <p class="presentations__text">
                                     Вы даже не подозреваете,
                                     насколько вы изумительны!
