add style for numbers block

--- a/index.html
+++ b/index.html
@@ -136,7 +136,23 @@
                             <!-- end creative -->
                             <!-- start numbers -->
                             <section class="numbers">
-
+                                <img src="img/technical/nerds-illustration.jpg.png" alt="красивая картинка" class="img numbers__img">
+                            <h3 class="numbers__title">с 2004 года Любим точность во всем:</h3>
+                            <table class="numbers__table">
+                                <tr class="numbers__tr">
+                                    <td class="numbers__td numbers__td--procent">146%</td>
+                                    <td class="numbers__td numbers__td--procent">100%</td>
+                                    <td class="numbers__td numbers__td--procent">50%</td>
+                                </tr>
+                                <tr class="numbers__tr">
+                                    <td class="numbers__td">Уровень
+                                            самоотдачи</td>
+                                    <td class="numbers__td">Соблюдение 
+                                            сроков</td>
+                                    <td class="numbers__td">Минимальная
+                                            предоплата</td>
+                                </tr>
+                            </table>
                             </section>
                             <!-- end numbers -->
                         </section>
