--- a/index.html
+++ b/index.html
@@ -160,7 +160,12 @@
                         <!-- start clients -->
                         <section class="clients">
                             <h2 class="visually-hidden">Наши Клиенты</h2>
-                            dd
+                            <ul class="clients__list">
+                                <li class="clients__item"><img src="img/logo/logo-1.png.png" alt="клиент" class="img clients__img"></li>
+                                <li class="clients__item"><img src="img/logo/logo-2.png.png" alt="клиент" class="img clients__img"></li>
+                                <li class="clients__item"><img src="img/logo/logo-3.png.png" alt="клиент" class="img clients__img"></li>
+                                <li class="clients__item"><img src="img/logo/logo-4.png.png" alt="клиент" class="img clients__img"></li>
+                            </ul>
                         </section>
                         <!-- end clients -->
                     </main>
